some changes in text, directories set

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1><strong>Odin</strong> <em>Recipies</em></h1>
+    <h2>Get to know some really nice low carb alternatives to McDonald's</h2>
+    <p id="disclaimer">Disclaimer: It might not be low carb, but it tastes good</p>
+    <p>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna.html">here</a></p>
 </body>
 </html>
