--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1><strong>Odin</strong> <em>Recipies</em></h1>
     <h2>Get to know some really nice low carb alternatives to McDonald's</h2>
     <p id="disclaimer">Disclaimer: It might not be low carb, but it tastes good</p>
-    <p>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna.html">here</a></p>
+    <ul title="Good ass recipes"> 
+        <li>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna/lasagna.html">here</a></li>
+        <li>Missing those delicious crickets from Khao San Road in Bangkok? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/crickets/crickets.html">here</a> to feel what getting fooled feels like again</li>
+        <li>Wanna go vegan instead? Click <a href="">here</a> to try our infamous vegan recipes!</li>
+    </ul>
+   
 </body>
 </html>
