added vegan, minor changes in description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p id="disclaimer">Disclaimer: It might not be low carb, but it tastes good</p>
     <ul title="Good ass recipes"> 
         <li>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna/lasagna.html">here</a></li>
-        <li>Missing those delicious crickets from Khao San Road in Bangkok? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/crickets/crickets.html">here</a> to feel what getting fooled feels like again</li>
+        <li>Missing those delicious crickets from Khao San Road in Bangkok? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/crickets/crickets.html">here</a> to re-experience what getting fooled feels like again</li>
         <li>Wanna go vegan instead? Click <a href="">here</a> to try our infamous vegan recipes!</li>
     </ul>
    
