--- a/recipes/vegan/vegan.html
+++ b/recipes/vegan/vegan.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="lasagna">Buongiorno! Have some lasagna babedibuppi!</h1>
-    <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna/pictures/lasagna.jpeg" alt="a sweet ass lasagna">
+    <h1>We'd like to welcome all the Veganz and those people who don't eat anything, enjoy our recipe!</h1>
+    <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/cucumber-water.jpeg">
 </body>
 </html>
