changed vegan picture size, minor changes lasagna

--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="lasagna">Buongiorno! Have some lasagna babedibuppi!</h1>
+    <h1 id="lasagna">Buongiorno a tutti! Have some lasagna babedibuppi!</h1>
     <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna/pictures/lasagna.jpeg" alt="a sweet ass lasagna">
 </body>
 </html>
