--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul title="Good ass recipes"> 
         <li>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna/lasagna.html">here</a></li>
         <li>Missing those delicious crickets from Khao San Road in Bangkok? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/crickets/crickets.html">here</a> to re-experience what getting fooled feels like again</li>
-        <li>Wanna go vegan instead? Click <a href="">here</a> to try our infamous vegan recipes!</li>
+        <li>Wanna go vegan instead? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/vegan.html">here</a> to try our infamous vegan recipes!</li>
     </ul>
    
 </body>
