--- a/recipes/vegan/vegan.html
+++ b/recipes/vegan/vegan.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>We'd like to welcome all the Veganz and those people who don't eat anything, enjoy our recipe!</h1>
-    <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/cucumber-water.jpeg">
+    <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/cucumber-water.jpeg" alt="Cucumberwater" height="600 px" width="350px">
 </body>
 </html>
