added div, nested p-element in div

--- a/recipes/vegan/vegan.html
+++ b/recipes/vegan/vegan.html
@@ -9,12 +9,22 @@
 <body>
     <h1>We'd like to welcome all the Veganz and those people who don't eat anything, enjoy our recipe!</h1>
     <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/cucumber-water.jpeg" alt="Cucumberwater" height="600 px" width="350px">
-    <ul>What is it good for?
+    <ul class="ulvegan">
+        <h2 class="ulvegantitle">What is it good for?</h2>
         <li>It's healtyh</li>
-        <li>>You most likely won't gain weight</li>
+        <li>You most likely won't gain weight</li>
         <li>If you drink enough of it you won't be thirsty for quite some time</li>
         <li>Your bladder will be clean as new born's teeth</li>
+        <li>It's rather cheap</li>
         <li>absolutely nothing aaah uuuhhh</li>
     </ul>
+    <div class="descriptionwater">
+        <p>Cucumber Water is beneficiary for you. If you dont believe me, just look at my face. No wrinkles, no nothing. Looking significally younger than I'm really am (I'm 31 btw.) and why you ask? I tell you why!<br>
+        Cucumber Water helped me stay in shape. Four years ago I slept at least 19 hours a day, and when I was awake I did nothing but go to McDonalds. There I would eat the whole menu, sometimes even twice, and then I would go back <br>
+        to my fart-smelling bathole and watch a series, mainly gossip girl. I felt so bad because they were looking so goddamn good and I was just a pimpel-infested piece of garbage. In one episode, Serena Van der Woodsen drank a G&T with cucumber, lime and peppermint <br>
+        and it looked so goddamn fancy. Since I wasn't working I couldn't afford neither gin nor tonic, so I limited myself to sparkling water, spiked with those mentioned ingredients. And my journey began...
+        <br><br><br>
+        Don't get me wrong, I still go to MikD every day and eat a shitton of delicous burgers. But now I only sleep for 16 hours. If I can do it, certainly you can, too!</p>
+    </div>
 </body>
 </html>
