--- a/recipes/vegan/vegan.html
+++ b/recipes/vegan/vegan.html
@@ -19,12 +19,25 @@
         <li>absolutely nothing aaah uuuhhh</li>
     </ul>
     <div class="descriptionwater">
-        <p>Cucumber Water is beneficiary for you. If you dont believe me, just look at my face. No wrinkles, no nothing. Looking significally younger than I'm really am (I'm 31 btw.) and why you ask? I tell you why!<br>
-        Cucumber Water helped me stay in shape. Four years ago I slept at least 19 hours a day, and when I was awake I did nothing but go to McDonalds. There I would eat the whole menu, sometimes even twice, and then I would go back <br>
-        to my fart-smelling bathole and watch a series, mainly gossip girl. I felt so bad because they were looking so goddamn good and I was just a pimpel-infested piece of garbage. In one episode, Serena Van der Woodsen drank a G&T with cucumber, lime and peppermint <br>
+        <p>Cucumber Water is beneficiary for you. If you dont believe me, just look at my face.<br> <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/uglyface.png" alt="cute little face" width="120px" height="100px"> 
+        <br> No wrinkles, no nothing. Looking significally younger than I'm really am (I'm 31 btw.) and why you ask? I tell you why!<br>
+        Cucumber Water helped me get in shape. Four years ago I slept at least 19 hours a day, and when I was awake I did nothing but go to McDonalds. There I would eat the whole menu, sometimes even twice, and then I would go back
+        to my fart-smelling bathole and watch a series, mainly gossip girl. I felt so bad because they were so goddamn good-looking and I was just a pimpel-infested piece of garbage blob. Just look at me. Disgusting. 
+        <br> <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/blobfish.jpeg" alt="me earlier" width="120px" height="100px"> 
+        <br>In one episode, Serena Van der Woodsen drank a G&T with cucumber, lime and peppermint <br>
         and it looked so goddamn fancy. Since I wasn't working I couldn't afford neither gin nor tonic, so I limited myself to sparkling water, spiked with those mentioned ingredients. And my journey began...
         <br><br><br>
         Don't get me wrong, I still go to MikD every day and eat a shitton of delicous burgers. But now I only sleep for 16 hours. If I can do it, certainly you can, too!</p>
+    </div>
+    <div class="veganrecipe">
+    <h3 class="veganrecipetitle">How to make cucumber water</h3>
+    <p>This is probably the most difficult recipe on this website. Follow the steps carefully, otherwise you'll need a bucket or two.</p>
+    <ol>
+        <li>Pour some cold water</li>
+        <li>slice the cucumbers in 5mm slices. This step is really important!</li>
+        <li>take the <em>organic</em> peppermint and squish it with the <em>organic</em> limes</li>
+        <li>mix everything together, get some ice and drink this badboi</li>
+    </ol>
     </div>
 </body>
 </html>
