just trying out

--- a/vegan.html
+++ b/vegan.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <h1>We'd like to welcome all the Veganz and those people who don't eat anything, enjoy our recipe!</h1>
-    <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/cucumber-water.jpeg" alt="Cucumberwater" height="600 px" width="350px">
-    <ul class="ulvegan">
+<div class="cucumberwater">
+    <img class="cucumberwater-picture" src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/cucumber-water.jpeg" alt="Cucumberwater" height="600 px" width="350px">
+</div>
+<div class="ulvegan">
+    <ul>
         <h2 class="ulvegantitle">What is it good for?</h2>
         <li>It's healtyh</li>
         <li>You most likely won't gain weight</li>
@@ -18,9 +23,10 @@
         <li>It's rather cheap</li>
         <li>absolutely nothing aaah uuuhhh</li>
     </ul>
+</div>  
     <div class="descriptionwater">
         <p>Cucumber Water is beneficiary for you. If you dont believe me, just look at my face.<br> <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/uglyface.png" alt="cute little face" width="120px" height="100px"> 
-        <br> No wrinkles, no nothing. Looking significally younger than I'm really am (I'm 31 btw.) and why you ask? I tell you why!<br>
+        <br> No wrinkles, no nothing. Looking significally younger than I really am (I'm 31 btw.) and why you ask? I tell you why!<br>
         Cucumber Water helped me get in shape. Four years ago I slept at least 19 hours a day, and when I was awake I did nothing but go to McDonalds. There I would eat the whole menu, sometimes even twice, and then I would go back
         to my fart-smelling bathole and watch a series, mainly gossip girl. I felt so bad because they were so goddamn good-looking and I was just a pimpel-infested piece of garbage blob. Just look at me. Disgusting. 
         <br> <img src="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/pictures/blobfish.jpeg" alt="me earlier" width="120px" height="100px"> 
@@ -32,7 +38,7 @@
     <div class="veganrecipe">
     <h3 class="veganrecipetitle">How to make cucumber water</h3>
     <p>This is probably the most difficult recipe on this website. Follow the steps carefully, otherwise you'll need a bucket or two.</p>
-    <ol>
+    <ol class="howto">
         <li>Pour some cold water</li>
         <li>slice the cucumbers in 5mm slices. This step is really important!</li>
         <li>take the <em>organic</em> peppermint and squish it with the <em>organic</em> limes</li>
