--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1><strong>Odin</strong> <em>Recipies</em></h1>
     <h2>Get to know some really nice low carb alternatives to McDonald's</h2>
     <p id="disclaimer">Disclaimer: It might not be low carb, but it tastes good</p>
     <ul title="Good ass recipes"> 
-        <li>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/lasagna/lasagna.html">here</a></li>
-        <li>Missing those delicious crickets from Khao San Road in Bangkok? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/crickets/crickets.html">here</a> to re-experience what getting fooled feels like again</li>
-        <li>Wanna go vegan instead? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/recipes/vegan/vegan.html">here</a> to try our infamous vegan recipes!</li>
+        <li>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/lasagna.html">here</a></li>
+        <li>Missing those delicious crickets from Khao San Road in Bangkok? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/crickets.html">here</a> to re-experience what getting fooled feels like again</li>
+        <li>Wanna go vegan instead? Click <a href="/Users/Carlito/Desktop/repos/odin-recipes/vegan.html">here</a> to try our infamous vegan recipes!</li>
     </ul>
    
 </body>
