added a few comments

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Main Title -->
     <h1><strong>Odin</strong> <em>Recipies</em></h1>
     <h2>Get to know some really nice low carb alternatives to McDonald's</h2>
+
+    <!--List of Recipes-->
     <p id="disclaimer">Disclaimer: It might not be low carb, but it tastes good</p>
     <ul title="Good ass recipes"> 
         <li>If you wanna eat some delicious lasagna, click <a href="/Users/Carlito/Desktop/repos/odin-recipes/lasagna.html">here</a></li>
